syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service Chapter_stockService {
    rpc CreateChapter_stock(CreateChapter_stockRequest) returns (Chapter_stock) {}
    rpc GetByIDChapter_stock(Chapter_stockPrimaryKey) returns (Chapter_stock) {}
    rpc GetListChapter_stock(GetListChapter_stockRequest) returns (GetListChapter_stockResponse) {}
    rpc UpdateChapter_stock(UpdateChapter_stockRequest) returns (Chapter_stock) {}
    rpc UpdatePatchChapter_stock(UpdatePatchChapter_stockRequest) returns (Chapter_stock) {}
    rpc DeleteChapter_stock(Chapter_stockPrimaryKey) returns (google.protobuf.Empty) {}
}

message Chapter_stockPrimaryKey {
    string id = 1;
}

message Chapter_stock {
    string id = 1;
    string name = 2;
    string branch_id = 3;
    string created_at = 4;
    string updated_at = 5;
}

message CreateChapter_stockRequest {
    string name = 1;
}

message UpdateChapter_stockRequest {
    string id = 1;
    string name = 2;
    string branch_id = 3;
}

message UpdatePatchChapter_stockRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListChapter_stockRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListChapter_stockResponse {
    int32 count = 1;
    repeated Chapter_stock chapter_stocks = 2;
}
